# SchrodingerSolver

./: .gitattributes  CMakeLists.txt  README.md  derivatives.c  derivatives.h  extremum.c  extremum.h  init.c  init.h  main.c  numerov.c  numerov.h  numerov_params.h  params.h  radial_eq_functions.c  radial_eq_functions.h  schroedinger.c  schroedinger.h  solve.c  solve.h  vector_mtx.c  vector_mtx.h
